--- a/README
+++ b/README
@@ -1,10 +1,21 @@
 # ABOUT
 that's my great template for iOS applications
 
+- Flurry v2.7 flurry.com
+- json-Framwork http://stig.github.com/json-framework
+- ShareKit v0.2.1 http://www.getsharekit.com/
+- Kiwi https://github.com/alding/Kiwi
+- Reachability http://developer.apple.com/library/ios/#samplecode/Reachability/Introduction/Intro.html
+- CacheUtility https://github.com/ferbass/CacheUtility
+
 # Install
 
 1 - Run the following command to add the submodule. Be sure you have are you in the root of your git repository.
 <pre>
-$ git submodule add git://github.com/ferbass/ios_application_template.git Application Template
+$ git submodule add git://github.com/ferbass/ios_application_template.git ApplicationTemplate
 </pre>
+2 - In Xcode click with right button on your project and following <pre>Add->Existing Files...</pre> and select <pre>ApplicationTemplate</pre> folder
 
+# YOU
+Fork, send a Pull Request
+and ENJOY!
