--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # ABOUT
-that's my great template for iOS applications
+A great template for iOS applications
 
 - Flurry v2.7 flurry.com
 - json-Framwork http://stig.github.com/json-framework
